<resources>
    <string name="app_name">Flights</string>
    <string name="action_settings">Settings</string>

    <!--    activity_main-->

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <!--    activity_main content descriptions-->
    <string name="find_flight_location_button">Click to see if flight location exists</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <!--    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--    <string name="interstitial_ad_unit_id">"ca-app-pub-3940256099942544~1033173712"</string>-->
    <string name="interstitial_ad_unit_id">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="get_flights_service">GetFlightsService</string>
    <string name="problem_retrieving_data">Problem retrieving data...Please try later!</string>
    <!--    activity_main hints-->
    <string name="country_name">UK</string>
    <string name="currency">GBP</string>
    <string name="locale">en-GB</string>
    <string name="localeName">Stockholm</string>


    <!--    file names for saving and reading used to save classes to file-->
    <string name="fileName">flightDepartures</string>
    <string name="fileNameQuote">flightQuotes</string>
    <string name="fileNameCurrency">flightCurrency</string>
    <string name="fileNameCarrier">flightCarrier</string>
    <string name="pathWithoutFileName">/data/user/0/com.example.flights/files/</string>


    <string name="class_not_found">Class Not Found</string>
    <string name="placeId">Place Id</string>
    <string name="placeName">Place Name</string>
    <string name="countryId">Country Id</string>
    <string name="regionId">Region Id</string>
    <string name="cityId">City Id</string>
    <string name="countryName">Country Name</string>
    <string name="detail_error_message">Unable to get origin flight position number</string>
    <string name="origin_place">Origin Place</string>
    <string name="origin_country">Origin Country</string>
    <string name="departure_date">Departure Date</string>
    <string name="destinationPlace">Destination Place</string>
    <string name="inboundDate">Return Date</string>
    <string name="returnDate">Return Date</string>
    <!--    activity_flight_date-->
    <string name="date">Date</string>
    <string name="search_flights">Search Flights</string>
    <string name="price">Price</string>
    <string name="action_favorite_flights">Favorite Flights</string>
    <string name="favorite_flights_activity_name">Favorite Flights</string>
    <string name="widgetoutgoingdate">Outgoing Date</string>
    <string name="widgetOutgoingPlace">Origin</string>
    <string name="widgetPrice">Price</string>
    <string name="carrierName">Carrier Name</string>
    <string name="carrierId">Carrier ID</string>

    <!--    activity_flight_date-->
    <!--    content description-->
    <string name="return_date_calendar_button">open calendar to select return date</string>
    <string name="departure_date_calendar_button">open calendar to select departure date</string>
    <string name="find_flights_button">Find if flight exists</string>

<!--    ClientApiKey Class-->
    <string name="rapidApiKeyUrl">https://english.api.rakuten.net/skyscanner/api/skyscanner-flight-search/details</string>
    <string name="rapidApiKeyTitle">Rapid Api Key:</string>
    <string name="instructions_click_on_tab">After you have logged in to your google account. Click on endpoints in the Skyscanner api.</string>
    <string name="copyPasteInstructions">Copy and paste the your api key here.</string>
    <string name="api_key_hint">SIGN-UP-FOR-KEY</string>
    <string name="start_button">START</string>
    <string name="invalid_api_key_message">Not a valid api key. Please try again.</string>
    <string name="welcome_to_flights">Welcome to Flights!</string>
    <string name="clientApiKeyActivityName">Getting Started</string>
    <string name="createNewAccountInstruction">Click button below to sign in and create a new account.</string>
    <string name="signUpContentDescription">Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_on_element_tab_to_get_api_key">Click on element tab to get api key</string>
    <string name="copy_and_paste_your_api_key_from_highlighted_region">Copy and paste your api key from highlighted region</string>
    <string name="plane_content_description">plane slide up or down to collapse</string>
    <string name="destination_flight_title">Destination Flight</string>
    <string name="destinatioin_plane_content_description">destination plane</string>
    <string name="find_flight_location">Flight Location</string>
    <string name="destination_plane_content_description">Destination Plane</string>
    <string name="departure_flight_title">Departure Flight</string>
    <string name="need_internet_message">Need an internet connection to check flights</string>
    <string name="check_api_or_try_again">Check your Api key or try again</string>




</resources>