<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FlightDate">

    <include
        android:id="@+id/simpleAppBar"
        layout="@layout/simple_app_bar" />

    <Button
        android:id="@+id/returnDateBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/return_date_calendar_button"
        android:onClick="returnButtonClicked"
        android:background="@color/colorPrimaryDark"
        android:text="@string/returnDate"
        android:padding="@dimen/button_padding"
        app:layout_constraintBottom_toTopOf="@+id/departureDateBT"
        app:layout_constraintLeft_toLeftOf="@+id/returnDateET"
        app:layout_constraintStart_toStartOf="@+id/returnDateET"
        app:layout_constraintTop_toBottomOf="@+id/departureDate" />

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/returnDateBT"
        app:layout_constraintTop_toBottomOf="@+id/departureDateBT" />

    <EditText
        android:id="@+id/currencyET"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/currency"
        app:layout_constraintStart_toStartOf="@+id/currencySpinner"
        app:layout_constraintTop_toBottomOf="@+id/currencySpinner" />

    <EditText
        android:id="@+id/returnDateET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/returnDate"
        app:layout_constraintBottom_toTopOf="@+id/departureDate"
        app:layout_constraintLeft_toLeftOf="@+id/destinationPlaceET"
        app:layout_constraintStart_toStartOf="@+id/destinationPlaceET"
        app:layout_constraintTop_toBottomOf="@+id/originCountryET" />

    <EditText
        android:id="@+id/destinationPlaceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/destinationPlace"
        app:layout_constraintBottom_toTopOf="@+id/originCountryET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originPlaceET" />

    <EditText
        android:id="@+id/departureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/departure_date"
        app:layout_constraintLeft_toLeftOf="@+id/originPlaceET"
        app:layout_constraintStart_toStartOf="@+id/originPlaceET"
        app:layout_constraintTop_toBottomOf="@+id/originCountryET" />

    <EditText
        android:id="@+id/originPlaceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/origin_place"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleAppBar" />

    <EditText
        android:id="@+id/originCountryET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/origin_country"
        app:layout_constraintLeft_toLeftOf="@+id/originPlaceET"
        app:layout_constraintStart_toStartOf="@+id/originPlaceET"
        app:layout_constraintTop_toBottomOf="@+id/originPlaceET" />


    <Spinner
        android:id="@+id/localitySpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureDateBT" />

    <EditText
        android:id="@+id/localeET"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/locale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localitySpinner" />

    <Button
        android:id="@+id/departureDateBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/departure_date_calendar_button"
        android:onClick="departureButtonClicked"
        android:text="@string/departure_date"
        android:padding="@dimen/button_padding"
        app:layout_constraintLeft_toLeftOf="@+id/departureDate"
        app:layout_constraintStart_toStartOf="@+id/departureDate"
        app:layout_constraintTop_toBottomOf="@+id/departureDate" />

    <Button
        android:id="@+id/searchFlightsBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/find_flights_button"
        android:onClick="searchFlights"
        android:text="@string/search_flights"
        android:padding="@dimen/button_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyET" />
</androidx.constraintlayout.widget.ConstraintLayout>