<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical"
    android:background="@color/browser_actions_bg_grey">

    <TextView
        android:id="@+id/favoriteOutgoingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/widgetoutgoingdate" />

    <TextView
        android:id="@+id/favoriteOutgoingPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/widgetOutgoingPlace" />

    <TextView
        android:id="@+id/favoriteOutgoingPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:text="@string/widgetPrice" />
</LinearLayout>